--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>InternetTrend</title>
-  <base href="https://harshit3101.github.io/InternetTrend/">
+  <base href="http://www.quickdailyblog.ml">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Bootstrap core CSS -->
